packages/swc-plugin-runners/tests/errors/non-async-function/output.js
export function badRunner(ctx) {
  return { name: "test", status: "pass" };
}

